# advent-of-code-2024

./: .gitignore  Cargo.toml
fuzz/: Cargo.toml  fuzz.sh  rust-toolchain
fuzz/fuzz_targets/: day9.rs
java/: Day10.java  Day4.java  Grid.java  Index2D.java
perl/: day3.pl  day5.pl
r/: day1.r  day7.r
scala/: build.sbt
scala/src/main/scala/: day6.scala  day8.scala
src/: errors.rs  lib.rs  main.rs  parsers.rs
